--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -2,5 +2,6 @@
   "appTitle": "Meta Persona",
   "@appTitle": {
     "description": "The title of the application"
-  }
+  },
+  "settings": "Settings"
 }
