Added button to switch to Catalog

--- a/lib/src/localization/app_uk.arb
+++ b/lib/src/localization/app_uk.arb
@@ -3,6 +3,6 @@
   "@appTitle": {
     "description": "Мета персона"
   },
-
-  "settings": "Налаштування"
+  "settings": "Налаштування",
+  "profilePageTitle": "Профіль"
 }
