--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -3,5 +3,6 @@
   "@appTitle": {
     "description": "The title of the application"
   },
-  "settings": "Settings"
+  "settings": "Settings",
+  "profilePageTitle": "Profile Page"
 }
