Added profile details.

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -4,5 +4,7 @@
     "description": "The title of the application"
   },
   "settings": "Settings",
-  "profilePageTitle": "Profile Page"
+  "profilePageTitle": "Profile Page",
+  "experienceSummaryText": "Flutter Developer 💙. 8 years with JavaScript. 3 Years with Flutter :)",
+  "viewMyArticles": "View my articles"
 }
