Added Card items for main menu catalog.

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -6,5 +6,6 @@
   "settings": "Settings",
   "profilePageTitle": "Profile Page",
   "experienceSummaryText": "Flutter Developer 💙. 8 years with JavaScript. 3 Years with Flutter :)",
-  "viewMyArticles": "View my articles"
+  "viewMyArticles": "My articles",
+  "viewShortPosts": "Short posts"
 }
