--- a/lib/src/localization/app_uk.arb
+++ b/lib/src/localization/app_uk.arb
@@ -6,5 +6,6 @@
   "settings": "Налаштування",
   "profilePageTitle": "Профіль",
   "experienceSummaryText": "Flutter Розробник 💙. 8 років JavaScript. 3 роки з Flutter :)",
-  "viewMyArticles": "Переглянути мої статті"
+  "viewMyArticles": "Мої статті",
+  "viewShortPosts": "Короткі дописи"
 }
