Added published on field.
Enhanced styles.

Fixed Border widgets: all colors are optional and default to PrimaryColor

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -10,5 +10,6 @@
   "viewShortPosts": "Short posts",
   "viewExperiencePage": "Professional Experience",
   "labelLoading": "Loading",
-  "labelAllPosts": "All Posts"
+  "labelAllPosts": "All Posts",
+  "labelPublishedOn": "Published on"
 }
