Enhanced layout and added i18n

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -11,5 +11,6 @@
   "viewExperiencePage": "Professional Experience",
   "labelLoading": "Loading",
   "labelAllPosts": "All Posts",
-  "labelPublishedOn": "Published on"
+  "labelPublishedOn": "Published on",
+  "labelSearch": "Search"
 }
