--- a/lib/src/localization/app_uk.arb
+++ b/lib/src/localization/app_uk.arb
@@ -11,5 +11,6 @@
   "viewExperiencePage": "Професійний досвід",
   "labelLoading": "Завантажується",
   "labelAllPosts": "Всі публікації",
-  "labelPublishedOn": "Опубліковано"
+  "labelPublishedOn": "Опубліковано",
+  "labelSearch": "Шукати"
 }
