Changed title of a Micro View Item page.

--- a/lib/src/localization/app_uk.arb
+++ b/lib/src/localization/app_uk.arb
@@ -13,5 +13,6 @@
   "labelAllPosts": "Всі публікації",
   "labelPublishedOn": "Опубліковано",
   "labelSearch": "Шукати",
-  "labelMetaProfile": "Мета профіль"
+  "labelMetaProfile": "Мета профіль",
+  "titleMicroItemView": "Мікро"
 }
