--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -13,5 +13,6 @@
   "labelAllPosts": "All Posts",
   "labelPublishedOn": "Published on",
   "labelSearch": "Search",
-  "labelMetaProfile": "Meta Profile"
+  "labelMetaProfile": "Meta Profile",
+  "titleMicroItemView": "Micro"
 }
