--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -7,7 +7,7 @@
   "profilePageTitle": "Profile Page",
   "experienceSummaryText": "Flutter Developer 💙. 8 years with JavaScript. 3 Years with Flutter :)",
   "viewMyArticles": "My articles",
-  "viewShortPosts": "Short posts (micros)",
+  "viewShortPosts": "Micros",
   "viewExperiencePage": "Professional Experience",
   "labelLoading": "Loading",
   "labelAllPosts": "All Posts",
