--- a/lib/src/localization/app_uk.arb
+++ b/lib/src/localization/app_uk.arb
@@ -7,7 +7,7 @@
   "profilePageTitle": "Профіль",
   "experienceSummaryText": "Flutter Розробник 💙. 8 років JavaScript. 3 роки з Flutter :)",
   "viewMyArticles": "Мої статті",
-  "viewShortPosts": "Короткі дописи (мікроси)",
+  "viewShortPosts": "Мікроси",
   "viewExperiencePage": "Професійний досвід",
   "labelLoading": "Завантажується",
   "labelAllPosts": "Всі публікації",
