--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -29,5 +29,7 @@
         "example": "8"
       }
     }
-  }
+  },
+  "labelListMetaPersonas": "List of Watched Meta Personas",
+  "hintEnterFullMetaPersonaUrl": "Enter full URL of Meta Persona"
 }
